<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/drawable_background_toolbar"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        android:elevation="3dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:transitionName="toolbar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/image_toolbarBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:srcCompat="@drawable/ic_back"/>

        <TextView
            android:id="@+id/text_toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:gravity="center|center_vertical"
            android:maxLines="2"
            android:text="@string/profile_detail"
            android:textAllCaps="false"
            android:textColor="@color/material_light_white"
            android:textSize="18sp"/>

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:background="@color/material_grey_200"
                android:transitionName="imageProfile"/>

            <ViewFlipper
                android:id="@+id/viewFlipper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/material_light_white"
                android:measureAllChildren="false"
                tools:ignore="UnusedAttribute">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <com.pnikosis.materialishprogress.ProgressWheel
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        wheel:matProg_barColor="@color/colorAccent"
                        wheel:matProg_barWidth="4dp"
                        wheel:matProg_fillRadius="false"
                        wheel:matProg_progressIndeterminate="true"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/text_error"
                        style="@style/TextStyle.Dark.Center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:textColor="@color/textDarkPrimary"
                        android:textSize="16sp"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextStyle.Dark.SingleLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/profile_detail_name"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"/>

                    <EditText
                        android:id="@+id/input_name"
                        style="@style/TextStyle.Dark"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/drawable_background_bordered"
                        android:enabled="false"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/input_surname"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/textDarkSecondary"
                        android:textSize="14sp"/>

                    <TextView
                        style="@style/TextStyle.Dark.SingleLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/profile_detail_surname"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"/>

                    <EditText
                        android:id="@+id/input_surname"
                        style="@style/TextStyle.Dark"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/drawable_background_bordered"
                        android:enabled="false"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/input_age"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/textDarkSecondary"
                        android:textSize="14sp"/>

                    <TextView
                        style="@style/TextStyle.Dark.SingleLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/profile_detail_age"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"/>

                    <EditText
                        android:id="@+id/input_age"
                        style="@style/TextStyle.Dark"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/drawable_background_bordered"
                        android:enabled="false"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/input_address"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/textDarkSecondary"
                        android:textSize="14sp"/>

                    <TextView
                        style="@style/TextStyle.Dark.SingleLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/profile_detail_address"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"/>

                    <EditText
                        android:id="@+id/input_address"
                        style="@style/TextStyle.Dark"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/drawable_background_bordered"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="100"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/input_phone"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textSize="14sp"/>

                    <TextView
                        style="@style/TextStyle.Dark.SingleLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/profile_detail_phone"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"/>

                    <EditText
                        android:id="@+id/input_phone"
                        style="@style/TextStyle.Dark"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/drawable_background_bordered"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textSize="14sp"/>


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_update"
                        style="@style/ButtonStyle.Colored.NoRaise"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="16dp"
                        android:background="@color/colorPrimary"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/profile_detail_update"
                        android:textAllCaps="true"
                        android:textColor="@color/material_light_white"
                        android:textSize="14sp"
                        android:textStyle="normal"/>
                </LinearLayout>

            </ViewFlipper>

        </LinearLayout>
    </ScrollView>

</LinearLayout>